build/y.output
Terminals unused in grammar

    SHR
    BAN
    BOR
    BNT
    BXO
    ADD
    MUL
    DIV
    REM
    GTR
    LES
    GEQ
    LEQ
    EQL
    NEQ
    LAN
    LOR
    ADD_ASSIGN
    SUB_ASSIGN
    MUL_ASSIGN
    DIV_ASSIGN
    REM_ASSIGN
    BAN_ASSIGN
    BOR_ASSIGN
    BXO_ASSIGN
    SHR_ASSIGN
    SHL_ASSIGN
    INC_ASSIGN
    DEC_ASSIGN
    IF
    ELSE
    FOR
    WHILE
    BREAK
    CONTINUE


State 61 conflicts: 2 reduce/reduce


Grammar

    0 $accept: Program $end

    1 $@1: ε

    2 Program: $@1 GlobalStmtList
    3        | ε

    4 GlobalStmtList: GlobalStmtList GlobalStmt
    5               | GlobalStmt

    6 GlobalStmt: DefineVariableStmt
    7           | FunctionDefStmt

    8 DefineVariableStmt: VARIABLE_T IDENT VAL_ASSIGN Expression ';'

    9 $@2: ε

   10 FunctionDefStmt: VARIABLE_T IDENT '(' FunctionParameterStmtList ')' $@2 '{' StmtList '}'

   11 FunctionParameterStmtList: FunctionParameterStmtList ',' FunctionParameterStmt
   12                          | FunctionParameterStmt
   13                          | ε

   14 FunctionParameterStmt: VARIABLE_T IDENT
   15                      | VARIABLE_T IDENT '[' ']'

   16 StmtList: StmtList Stmt
   17         | Stmt

   18 Stmt: ';'
   19     | COUT CoutParmListStmt ';'
   20     | RETURN Expression ';'

   21 CoutParmListStmt: CoutParmListStmt SHL Expression
   22                 | SHL Expression
   23                 | SHL STR_LIT
   24                 | SHL ENDL

   25 Expression: Expression '+' Term
   26           | Expression '-' Term
   27           | Term

   28 Term: Term '*' Factor
   29     | Term '/' Factor
   30     | Term '%' Factor
   31     | Factor

   32 Factor: NOT Factor
   33       | BOOL_LIT
   34       | SUB Factor
   35       | '(' Expression ')'
   36       | INT_LIT
   37       | FLOAT_LIT
   38       | IDENT
   39       | STR_LIT


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 30
    '(' (40) 10 35
    ')' (41) 10 35
    '*' (42) 28
    '+' (43) 25
    ',' (44) 11
    '-' (45) 26
    '/' (47) 29
    ';' (59) 8 18 19 20
    '[' (91) 15
    ']' (93) 15
    '{' (123) 10
    '}' (125) 10
    error (256)
    COUT (258) 19
    ENDL (259) 24
    SHR (260)
    SHL (261) 21 22 23 24
    BAN (262)
    BOR (263)
    BNT (264)
    BXO (265)
    ADD (266)
    SUB (267) 34
    MUL (268)
    DIV (269)
    REM (270)
    NOT (271) 32
    GTR (272)
    LES (273)
    GEQ (274)
    LEQ (275)
    EQL (276)
    NEQ (277)
    LAN (278)
    LOR (279)
    VAL_ASSIGN (280) 8
    ADD_ASSIGN (281)
    SUB_ASSIGN (282)
    MUL_ASSIGN (283)
    DIV_ASSIGN (284)
    REM_ASSIGN (285)
    BAN_ASSIGN (286)
    BOR_ASSIGN (287)
    BXO_ASSIGN (288)
    SHR_ASSIGN (289)
    SHL_ASSIGN (290)
    INC_ASSIGN (291)
    DEC_ASSIGN (292)
    IF (293)
    ELSE (294)
    FOR (295)
    WHILE (296)
    RETURN (297) 20
    BREAK (298)
    CONTINUE (299)
    VARIABLE_T <var_type> (300) 8 10 14 15
    IDENT <s_var> (301) 8 10 14 15 38
    STR_LIT <s_var> (302) 23 39
    BOOL_LIT <b_var> (303) 33
    INT_LIT <i_var> (304) 36
    FLOAT_LIT <f_var> (305) 37


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    Program (65)
        on left: 2 3
        on right: 0
    $@1 (66)
        on left: 1
        on right: 2
    GlobalStmtList (67)
        on left: 4 5
        on right: 2 4
    GlobalStmt (68)
        on left: 6 7
        on right: 4 5
    DefineVariableStmt (69)
        on left: 8
        on right: 6
    FunctionDefStmt (70)
        on left: 10
        on right: 7
    $@2 (71)
        on left: 9
        on right: 10
    FunctionParameterStmtList (72)
        on left: 11 12 13
        on right: 10 11
    FunctionParameterStmt (73)
        on left: 14 15
        on right: 11 12
    StmtList (74)
        on left: 16 17
        on right: 10 16
    Stmt (75)
        on left: 18 19 20
        on right: 16 17
    CoutParmListStmt (76)
        on left: 21 22 23 24
        on right: 19 21
    Expression <object_val> (77)
        on left: 25 26 27
        on right: 8 20 21 22 25 26 35
    Term <object_val> (78)
        on left: 28 29 30 31
        on right: 25 26 27 28 29 30
    Factor <object_val> (79)
        on left: 32 33 34 35 36 37 38 39
        on right: 28 29 30 31 32 34


State 0

    0 $accept: • Program $end

    $end      reduce using rule 3 (Program)
    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 • GlobalStmtList

    VARIABLE_T  shift, and go to state 4

    GlobalStmtList      go to state 5
    GlobalStmt          go to state 6
    DefineVariableStmt  go to state 7
    FunctionDefStmt     go to state 8


State 3

    0 $accept: Program $end •

    $default  accept


State 4

    8 DefineVariableStmt: VARIABLE_T • IDENT VAL_ASSIGN Expression ';'
   10 FunctionDefStmt: VARIABLE_T • IDENT '(' FunctionParameterStmtList ')' $@2 '{' StmtList '}'

    IDENT  shift, and go to state 9


State 5

    2 Program: $@1 GlobalStmtList •
    4 GlobalStmtList: GlobalStmtList • GlobalStmt

    VARIABLE_T  shift, and go to state 4

    $default  reduce using rule 2 (Program)

    GlobalStmt          go to state 10
    DefineVariableStmt  go to state 7
    FunctionDefStmt     go to state 8


State 6

    5 GlobalStmtList: GlobalStmt •

    $default  reduce using rule 5 (GlobalStmtList)


State 7

    6 GlobalStmt: DefineVariableStmt •

    $default  reduce using rule 6 (GlobalStmt)


State 8

    7 GlobalStmt: FunctionDefStmt •

    $default  reduce using rule 7 (GlobalStmt)


State 9

    8 DefineVariableStmt: VARIABLE_T IDENT • VAL_ASSIGN Expression ';'
   10 FunctionDefStmt: VARIABLE_T IDENT • '(' FunctionParameterStmtList ')' $@2 '{' StmtList '}'

    VAL_ASSIGN  shift, and go to state 11
    '('         shift, and go to state 12


State 10

    4 GlobalStmtList: GlobalStmtList GlobalStmt •

    $default  reduce using rule 4 (GlobalStmtList)


State 11

    8 DefineVariableStmt: VARIABLE_T IDENT VAL_ASSIGN • Expression ';'

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Expression  go to state 21
    Term        go to state 22
    Factor      go to state 23


State 12

   10 FunctionDefStmt: VARIABLE_T IDENT '(' • FunctionParameterStmtList ')' $@2 '{' StmtList '}'

    VARIABLE_T  shift, and go to state 24

    $default  reduce using rule 13 (FunctionParameterStmtList)

    FunctionParameterStmtList  go to state 25
    FunctionParameterStmt      go to state 26


State 13

   34 Factor: SUB • Factor

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Factor  go to state 27


State 14

   32 Factor: NOT • Factor

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Factor  go to state 28


State 15

   38 Factor: IDENT •

    $default  reduce using rule 38 (Factor)


State 16

   39 Factor: STR_LIT •

    $default  reduce using rule 39 (Factor)


State 17

   33 Factor: BOOL_LIT •

    $default  reduce using rule 33 (Factor)


State 18

   36 Factor: INT_LIT •

    $default  reduce using rule 36 (Factor)


State 19

   37 Factor: FLOAT_LIT •

    $default  reduce using rule 37 (Factor)


State 20

   35 Factor: '(' • Expression ')'

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Expression  go to state 29
    Term        go to state 22
    Factor      go to state 23


State 21

    8 DefineVariableStmt: VARIABLE_T IDENT VAL_ASSIGN Expression • ';'
   25 Expression: Expression • '+' Term
   26           | Expression • '-' Term

    ';'  shift, and go to state 30
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32


State 22

   27 Expression: Term •
   28 Term: Term • '*' Factor
   29     | Term • '/' Factor
   30     | Term • '%' Factor

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '%'  shift, and go to state 35

    $default  reduce using rule 27 (Expression)


State 23

   31 Term: Factor •

    $default  reduce using rule 31 (Term)


State 24

   14 FunctionParameterStmt: VARIABLE_T • IDENT
   15                      | VARIABLE_T • IDENT '[' ']'

    IDENT  shift, and go to state 36


State 25

   10 FunctionDefStmt: VARIABLE_T IDENT '(' FunctionParameterStmtList • ')' $@2 '{' StmtList '}'
   11 FunctionParameterStmtList: FunctionParameterStmtList • ',' FunctionParameterStmt

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


State 26

   12 FunctionParameterStmtList: FunctionParameterStmt •

    $default  reduce using rule 12 (FunctionParameterStmtList)


State 27

   34 Factor: SUB Factor •

    $default  reduce using rule 34 (Factor)


State 28

   32 Factor: NOT Factor •

    $default  reduce using rule 32 (Factor)


State 29

   25 Expression: Expression • '+' Term
   26           | Expression • '-' Term
   35 Factor: '(' Expression • ')'

    ')'  shift, and go to state 39
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32


State 30

    8 DefineVariableStmt: VARIABLE_T IDENT VAL_ASSIGN Expression ';' •

    $default  reduce using rule 8 (DefineVariableStmt)


State 31

   25 Expression: Expression '+' • Term

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Term    go to state 40
    Factor  go to state 23


State 32

   26 Expression: Expression '-' • Term

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Term    go to state 41
    Factor  go to state 23


State 33

   28 Term: Term '*' • Factor

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Factor  go to state 42


State 34

   29 Term: Term '/' • Factor

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Factor  go to state 43


State 35

   30 Term: Term '%' • Factor

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Factor  go to state 44


State 36

   14 FunctionParameterStmt: VARIABLE_T IDENT •
   15                      | VARIABLE_T IDENT • '[' ']'

    '['  shift, and go to state 45

    $default  reduce using rule 14 (FunctionParameterStmt)


State 37

   10 FunctionDefStmt: VARIABLE_T IDENT '(' FunctionParameterStmtList ')' • $@2 '{' StmtList '}'

    $default  reduce using rule 9 ($@2)

    $@2  go to state 46


State 38

   11 FunctionParameterStmtList: FunctionParameterStmtList ',' • FunctionParameterStmt

    VARIABLE_T  shift, and go to state 24

    FunctionParameterStmt  go to state 47


State 39

   35 Factor: '(' Expression ')' •

    $default  reduce using rule 35 (Factor)


State 40

   25 Expression: Expression '+' Term •
   28 Term: Term • '*' Factor
   29     | Term • '/' Factor
   30     | Term • '%' Factor

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '%'  shift, and go to state 35

    $default  reduce using rule 25 (Expression)


State 41

   26 Expression: Expression '-' Term •
   28 Term: Term • '*' Factor
   29     | Term • '/' Factor
   30     | Term • '%' Factor

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '%'  shift, and go to state 35

    $default  reduce using rule 26 (Expression)


State 42

   28 Term: Term '*' Factor •

    $default  reduce using rule 28 (Term)


State 43

   29 Term: Term '/' Factor •

    $default  reduce using rule 29 (Term)


State 44

   30 Term: Term '%' Factor •

    $default  reduce using rule 30 (Term)


State 45

   15 FunctionParameterStmt: VARIABLE_T IDENT '[' • ']'

    ']'  shift, and go to state 48


State 46

   10 FunctionDefStmt: VARIABLE_T IDENT '(' FunctionParameterStmtList ')' $@2 • '{' StmtList '}'

    '{'  shift, and go to state 49


State 47

   11 FunctionParameterStmtList: FunctionParameterStmtList ',' FunctionParameterStmt •

    $default  reduce using rule 11 (FunctionParameterStmtList)


State 48

   15 FunctionParameterStmt: VARIABLE_T IDENT '[' ']' •

    $default  reduce using rule 15 (FunctionParameterStmt)


State 49

   10 FunctionDefStmt: VARIABLE_T IDENT '(' FunctionParameterStmtList ')' $@2 '{' • StmtList '}'

    COUT    shift, and go to state 50
    RETURN  shift, and go to state 51
    ';'     shift, and go to state 52

    StmtList  go to state 53
    Stmt      go to state 54


State 50

   19 Stmt: COUT • CoutParmListStmt ';'

    SHL  shift, and go to state 55

    CoutParmListStmt  go to state 56


State 51

   20 Stmt: RETURN • Expression ';'

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Expression  go to state 57
    Term        go to state 22
    Factor      go to state 23


State 52

   18 Stmt: ';' •

    $default  reduce using rule 18 (Stmt)


State 53

   10 FunctionDefStmt: VARIABLE_T IDENT '(' FunctionParameterStmtList ')' $@2 '{' StmtList • '}'
   16 StmtList: StmtList • Stmt

    COUT    shift, and go to state 50
    RETURN  shift, and go to state 51
    ';'     shift, and go to state 52
    '}'     shift, and go to state 58

    Stmt  go to state 59


State 54

   17 StmtList: Stmt •

    $default  reduce using rule 17 (StmtList)


State 55

   22 CoutParmListStmt: SHL • Expression
   23                 | SHL • STR_LIT
   24                 | SHL • ENDL

    ENDL       shift, and go to state 60
    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 61
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Expression  go to state 62
    Term        go to state 22
    Factor      go to state 23


State 56

   19 Stmt: COUT CoutParmListStmt • ';'
   21 CoutParmListStmt: CoutParmListStmt • SHL Expression

    SHL  shift, and go to state 63
    ';'  shift, and go to state 64


State 57

   20 Stmt: RETURN Expression • ';'
   25 Expression: Expression • '+' Term
   26           | Expression • '-' Term

    ';'  shift, and go to state 65
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32


State 58

   10 FunctionDefStmt: VARIABLE_T IDENT '(' FunctionParameterStmtList ')' $@2 '{' StmtList '}' •

    $default  reduce using rule 10 (FunctionDefStmt)


State 59

   16 StmtList: StmtList Stmt •

    $default  reduce using rule 16 (StmtList)


State 60

   24 CoutParmListStmt: SHL ENDL •

    $default  reduce using rule 24 (CoutParmListStmt)


State 61

   23 CoutParmListStmt: SHL STR_LIT •
   39 Factor: STR_LIT •

    SHL       reduce using rule 23 (CoutParmListStmt)
    SHL       [reduce using rule 39 (Factor)]
    ';'       reduce using rule 23 (CoutParmListStmt)
    ';'       [reduce using rule 39 (Factor)]
    $default  reduce using rule 39 (Factor)


State 62

   22 CoutParmListStmt: SHL Expression •
   25 Expression: Expression • '+' Term
   26           | Expression • '-' Term

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32

    $default  reduce using rule 22 (CoutParmListStmt)


State 63

   21 CoutParmListStmt: CoutParmListStmt SHL • Expression

    SUB        shift, and go to state 13
    NOT        shift, and go to state 14
    IDENT      shift, and go to state 15
    STR_LIT    shift, and go to state 16
    BOOL_LIT   shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '('        shift, and go to state 20

    Expression  go to state 66
    Term        go to state 22
    Factor      go to state 23


State 64

   19 Stmt: COUT CoutParmListStmt ';' •

    $default  reduce using rule 19 (Stmt)


State 65

   20 Stmt: RETURN Expression ';' •

    $default  reduce using rule 20 (Stmt)


State 66

   21 CoutParmListStmt: CoutParmListStmt SHL Expression •
   25 Expression: Expression • '+' Term
   26           | Expression • '-' Term

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32

    $default  reduce using rule 21 (CoutParmListStmt)
